usar los documentos locales

--- a/seguimiento/templates/planes/plan_detail.html
+++ b/seguimiento/templates/planes/plan_detail.html
@@ -44,7 +44,7 @@
     {% endif %}
 
     {% if plan.fuente %}
-            <p>Documento: <a href="{{ plan.fuente }}">{{ plan.entidad }} &mdash; Plan Institucional de Implementación de Software Libre y Estándares Abiertos</a></p>
+            <p>Documento: <a href="{{ plan.documento.url }}">{{ plan.entidad }} &mdash; Plan Institucional de Implementación de Software Libre y Estándares Abiertos</a></p>
     {% endif %}
         </div>
     </section>
