--- a/seguimiento/templates/planes/plan_base.html
+++ b/seguimiento/templates/planes/plan_base.html
@@ -9,8 +9,8 @@
     {% block twitter_cards %}
     {% endblock %}
 
-    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/grids-responsive-min.css">
+    <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.1/build/pure-min.css">
+    <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.1/build/grids-responsive-min.css">
     <link rel="stylesheet" href="{% static 'convocatorias.css' %}">
 </head>
 <body>
